llevat usuari dels grups cooperatius. Tothom amb permisos pot veure i editar tots els grups.